# wall_ground_plane_extractor_from_pointcloud

./: CMakeLists.txt  README.md  package.xml
config/plane_extraction_parameters/: gazebo_simple_wall_env.yaml  kobelcko.yaml  kobelcko_2023.yaml  model_crane.yaml
config/plane_extraction_using_roi/: kobelcko_2023.yaml
config/plane_extraction_with_out_clustering_parameters/: gazebo_simple_wall_env.yaml  gazebo_simple_wall_env_noised_down_sampling.yaml  kobelcko.yaml  kobelcko_2023.yaml  model_crane.yaml
include/: matplotlibcpp.h  ploting_cloud_visualization_troubleshooting.hpp
input_pointcloud_data/kobelcko_exp_environment/: ground_seg1.txt  ground_seg2.txt  ground_seg3.txt  ground_seg4.txt  ground_seg_cloud1.pcd  ground_seg_cloud2.pcd  ground_seg_cloud3.pcd  ground_seg_cloud4.pcd  wall_seg1.txt  wall_seg2.txt  wall_seg3.txt  wall_seg4.txt  wall_seg_cloud1.pcd  wall_seg_cloud2.pcd  wall_seg_cloud3.pcd  wall_seg_cloud4.pcd
input_pointcloud_data/kobelcko_exp_environment/Extracted planes/: ground_seg1.txt  ground_seg2.txt  ground_seg3.txt  ground_seg_cloud1.pcd  ground_seg_cloud3.pcd  wall_seg1.txt  wall_seg2.txt  wall_seg3.txt  wall_seg4.txt  wall_seg5.txt  wall_seg_cloud1.pcd  wall_seg_cloud2.pcd  wall_seg_cloud3.pcd  wall_seg_cloud4.pcd  wall_seg_cloud5.pcd
input_pointcloud_data/kobelco_2023/: after_opti_graph.g2o  ground_seg1.txt  ground_seg_cloud1.pcd  wall_seg1.txt  wall_seg2.txt  wall_seg3.txt  wall_seg4.txt  wall_seg_cloud1.pcd  wall_seg_cloud2.pcd  wall_seg_cloud3.pcd  wall_seg_cloud4.pcd
input_pointcloud_data/model_crane_exp_environment/: ground_seg2.txt  ground_seg3.txt  ground_seg4.txt  ground_seg5.txt  ground_seg_cloud5.pcd  original_data_downsampled.pcd  wall_seg1.txt  wall_seg10.txt  wall_seg11.txt  wall_seg2.txt  wall_seg3.txt  wall_seg4.txt  wall_seg5.txt  wall_seg6.txt  wall_seg7.txt  wall_seg8.txt  wall_seg9.txt  wall_seg_cloud1.pcd  wall_seg_cloud10.pcd  wall_seg_cloud11.pcd  wall_seg_cloud2.pcd  wall_seg_cloud3.pcd  wall_seg_cloud4.pcd  wall_seg_cloud5.pcd  wall_seg_cloud6.pcd  wall_seg_cloud7.pcd  wall_seg_cloud8.pcd  wall_seg_cloud9.pcd
launch/: plane_extraction.launch  plane_extraction_using_selected_roi.launch  plane_extraction_with_out_clustering.launch
src/: plane_extraction.cpp  plane_extraction_using_selected_roi.cpp  plane_extraction_with_out_clustering.cpp
