<?xml version="1.0"?>
<package format="2">
  <name>wall_ground_plane_extractor_from_pointcloud</name>
  <version>0.0.0</version>
  <description> wall_ground_plane_extractor_from_pointcloud </description>


  <maintainer email="aisl@todo.todo">aisl</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>eigen</depend>
  <depend>fast_gicp</depend>
  <depend>geodesy</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>ndt_omp</depend>
  <depend>nmea_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>msf_updates</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>tf</exec_depend>



  <export>

  </export>
</package>
